# DiNoT

./: .gitignore  README.md  data_gen.py  pyproject.toml  requirements.txt  run_dino_sd.py  run_dino_sd3.py  run_dino_sdxl.py  run_dinot_sd.py  run_dinot_sd3.py  run_dinot_sdxl.py
data/: drawbench_data.json  geneval_data.json  partiprompt_data.json
lvqa_dino/: __init__.py  daam_attention.py  optimizer.py  segmentation.py  vqa_scorer.py
lvqa_dinot/: attention_utils.py  differentiable_blur.py  lvqa_scoring.py  prompt_decomposer.py
pipelines/: p_t.py  pipeline_sd3_dino.py  pipeline_sd3_dinot.py  pipeline_sd_dino.py  pipeline_sd_dinot.py  pipeline_sdxl_dino.py  pipeline_sdxl_dinot.py  pipeline_sdxl_directional_gaussian.py  pipeline_sdxl_lr.py  pipeline_stable_diffusion_3_nd.py  pipeline_stable_diffusion_xl_nd.py  pipeline_v1_4_dino.py  pipeline_v1_4_dino_without_cot.py  pipeline_v1_4_dino_without_direc.py  pipeline_v1_4_directional_gaussian.py  pipeline_v1_4_directional_gaussian_clip.py  pipeline_v1_4_directional_gaussian_cot.py  pipeline_v1_4_directional_gaussian_cot_2.py  pipeline_v1_4_directional_gaussian_cot_3.py  pipeline_v1_4_directional_gaussian_cot_4.py  pipeline_v1_4_directional_gaussian_cot_clip copy.py  pipeline_v1_4_directional_gaussian_cot_clip.py  pipeline_v1_4_directional_gaussian_cot_high_degree.py  pipeline_v1_4_directional_gaussian_cot_lvqa.py  pipeline_v1_4_directional_gaussian_cot_lvqa_ori.py  pipeline_v1_4_directional_gaussian_feedback.py
sample_data/: single_prompt.json
t2v_metrics/models/clipscore_models/: blip2_itc_model.py  clip_model.py  hpsv2_model.py  pickscore_model.py
t2v_metrics/models/itmscore_models/: blip2_itm_model.py  image_reward_model.py
t2v_metrics/models/vqascore_models/: llava_model.py  mm_utils.py
t2v_metrics/models/vqascore_models/clip_t5/model/language_model/: clip_t5.py
t2v_metrics/models/vqascore_models/lavis/models/: base_model.py  vit.py
t2v_metrics/models/vqascore_models/lavis/models/albef_models/: albef_feature_extractor.py
t2v_metrics/models/vqascore_models/lavis/models/blip2_models/: blip2_qformer.py  blip2_t5.py  blip2_t5_instruct.py  blip2_vicuna.py  blip2_vicuna_instruct.py
t2v_metrics/models/vqascore_models/lavis/models/blip_models/: blip_feature_extractor.py
