[project]
name = "DiNo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.3.0",
    "accelerate==1.7.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.2",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "autodistill-grounded-sam>=0.1.2",
    "bitsandbytes==0.46.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "clip",
    "datasets==3.6.0",
    "diffusers",
    "dill==0.3.8",
    "docker-pycreds==0.4.0",
    "dotenv>=0.9.9",
    "fairscale>=0.4.13",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.0",
    "ftfy==6.3.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "grpcio==1.71.0",
    "hf-xet==1.1.2",
    "huggingface-hub==0.32.2",
    "idna==3.10",
    "image-reward>=1.5",
    "importlib-metadata==8.7.0",
    "iopath>=0.1.10",
    "jinja2==3.1.6",
    "markdown==3.8",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.3.0",
    "openai>=2.24.0",
    "opencv-python>=4.13.0.92",
    "packaging==25.0",
    "pandas==2.2.3",
    "peft==0.15.2",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "propcache==0.3.1",
    "protobuf==6.31.0",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "roboflow>=0.1.1",
    "safetensors==0.5.3",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "sentry-sdk==2.29.1",
    "setproctitle==1.3.6",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sympy==1.14.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tiktoken>=0.12.0",
    "timm>=1.0.25",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
    "transformers==4.52.3",
    "triton==3.3.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wandb==0.19.11",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "xformers==0.0.30",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zipp==3.22.0",
]

[tool.uv]
override-dependencies = [
    "timm>=1.0.25",
    "transformers==4.52.3"
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers", rev = "195926bbdc69d20d442179b2fe96023edc751212" }
clip = { git = "https://github.com/openai/CLIP.git" }
